--- a/src/Theme/vars.sass
+++ b/src/Theme/vars.sass
@@ -7,7 +7,7 @@ $lightGrey: #F8F8F8
 $grey: #7E7E7E
 $error: #CB3D40
 
-// width
+// container width
 $desktopWidthContainer: 1170px
 $laptopWidthContainer: 904px
 $tabletWidthContainer: 704px
