--- a/src/components/Tooltip/Tooltip.module.scss
+++ b/src/components/Tooltip/Tooltip.module.scss
@@ -1,32 +1,28 @@
 @import "./src/Theme/vars";
 
 .tooltip {
-    position: relative;
-    display: inline-block;
+    text-align: center;
     cursor: pointer;
     font-size: 16px;
     line-height: 26px;
-}
 
-.tooltip .tooltipText {
-    visibility: hidden;
-    width: 244px;
-    color: #fff;
-    text-align: center;
-    background: rgba(0, 0, 0, 0.87);
-    border-radius: 4px;
-    padding: 3px 16px;
-    font-size: 16px;
-    line-height: 26px;
+    &__wrapper {
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 
-    /* Position the tooltip */
-    position: absolute;
-    z-index: 1;
-    top: 100%;
-    left: 33.3%;
-    margin-top: 21px;
-}
-
-.tooltip:hover .tooltipText {
-    visibility: visible;
+    &--tip {
+        position: absolute;
+        font-size: 16px;
+        line-height: 26px;
+        margin-top: 24px;
+        left: 60%;
+        border-radius: 4px;
+        transform: translateX(-50%);
+        color: $white;
+        background: rgba(0, 0, 0, 0.87);
+        padding: 3px 16px;
+        z-index: 100;
+        white-space: nowrap;
+    }
 }
