--- a/src/components/Tooltip/Tooltip.module.scss
+++ b/src/components/Tooltip/Tooltip.module.scss
@@ -5,6 +5,7 @@
     cursor: pointer;
     font-size: 16px;
     line-height: 26px;
+    white-space: nowrap;
 
     &__wrapper {
         overflow: hidden;
