--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -17,7 +17,7 @@
     }
 
     &--disabled {
-        color: white;
+        color: rgba(255, 255, 255, 0.87);
         background-color: #B4B4B4;
     }
 }
