--- a/src/components/Message/Message.module.scss
+++ b/src/components/Message/Message.module.scss
@@ -1,9 +1,25 @@
 @import "./src/Theme/vars";
 
 .message {
-    margin: 50px 0;
 
-    &--danger {
-        color: $error;
+    &__request {
+        &--error {
+            margin: 50px 0;
+            color: $error;
+        }
+    }
+
+    &__validation {
+        font-size: 12px;
+        line-height: 14px;
+        margin: 4px 0 0 16px;
+
+        &--info {
+            color: $grey;
+        }
+
+        &--error {
+            color: $error
+        }
     }
 }
